--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -17,7 +17,7 @@ layout: default
     <figure>
       <div class="thumb-square img img-circle img-thumbnail" style="background-image: url({{ site.cdn | replace: '0x0', '300x300'}}/{{ item.image }})"></div>
     </figure>
-    {% if item.title %}<h3>{{ item.title }} {% if item.start_date %}<small>{{ item.start_date | date_to_string }}</small>{% endif %}</h3>{% endif %}
-    {% if item.content %}<p>{{ item.content | strip_html | truncatewords:20 }}</p>{% endif %}
+    {% if item.title %}<h3>{{ item.title }}</h3>{% endif %}
+    <p>aka<br>{{ item.aka }}</p>
     </a><br></div>{% endfor %}
   </div>
