--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -19,5 +19,6 @@ layout: default
     </figure>
     {% if item.title %}<h3>{{ item.title }}</h3>{% endif %}
     <p>aka<br>{{ item.aka }}</p>
+    <p>{{ item.wins }}-{{ item.losses }}-{{ item.draws }} ({{ item.kos }} KOs)</p>
     </a><br></div>{% endfor %}
   </div>
