--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@
     <link rel="icon" href="{{ site.url }}/favicon.ico" />
     <link rel="canonical" href="{{ site.url }}{{ page.url | remove:'index.html' }}"/>
     <title>{{ page.title }} | {{ site.title }}</title>
-    <link href="//fonts.googleapis.com/css?family=Open+Sans:800" rel="stylesheet" type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
     <link href="{{site.url}}/assets/css/style.css?{{ site.v }}" rel="stylesheet" />
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="{{site.url}}/assets/ie10-viewport-bug-workaround.js"></script>
