--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -10,10 +10,6 @@ layout: default
         <p class="lead">{{ content | strip_html | newline_to_br }}</p>
       </div>
     </div>
-    {% assign pages = (site.content | where: 'published', 1 | sort: 'order') %}
-    {% for item in pages %}
-     {{ item.content }}
-    {% endfor %}
   
     <div class="row equal">
     {% for item in team %}
@@ -24,5 +20,27 @@ layout: default
     {% if item.title %}<h3>{{ item.title }}</h3>{% endif %}
     <p>aka<br>{{ item.aka }}</p>
     <p>{{ item.wins }}-{{ item.losses }}-{{ item.draws }} ({{ item.kos }} KOs)</p>
-    </a><br></div>{% endfor %}
+    </a><br></div>
+    {% endfor %}
+  
+    {% assign gallery = (site.gallery | where: 'published', 1 | sort: 'order') %}
+    <div class="row equal">
+    {% for item in gallery %}
+    <div class="col-sm-4 col-md-3"><a class="thumb" href="{{ site.url }}{{ item.url }}" >
+    <figure>
+      <div class="thumb-square img img-thumbnail" style="background-image: url({{ site.cdn | replace: '0x0', '300x300'}}/{{ item.image }})"></div>
+    </figure>
+    {% if item.title %}<h3>{{ item.title }}</h3>{% endif %}
+    </a><br></div>
+    {% endfor %}
+  
+    <div class="row equal">
+    {% for item in site.pages %}
+    <div class="col-sm-4 col-md-3"><a class="thumb" href="{{ site.url }}{{ item.url }}" >
+    <figure>
+      <div class="thumb-square img img-thumbnail" style="background-image: url({{ site.cdn | replace: '0x0', '300x300'}}/{{ item.image }})"></div>
+    </figure>
+    {% if item.title %}<h3>{{ item.title }}</h3>{% endif %}
+    </a><br></div>
+    {% endfor %}
   </div>
