--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -38,7 +38,7 @@ layout: default
     {% for item in site.pages %}
     <div class="col-sm-4 col-md-3"><a class="thumb" href="{{ site.url }}{{ item.url }}" >
     <figure>
-      <div class="thumb-square img img-thumbnail" style="background-image: url({{ site.cdn | replace: '0x0', '300x300'}}/{{ item.image }})"></div>
+      <div class="thumb-square img img-thumbnail" style="background-image: url({{ site.cdn | replace: '0x0', '300x300'}}{{ item.image }})"></div>
     </figure>
     {% if item.title %}<h3>{{ item.title }}</h3>{% endif %}
     </a><br></div>
