--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -17,7 +17,7 @@ layout: default
       {% for item in team %}
       <div class="col-sm-6 col-md-4"><a class="thumb" href="{{ site.url }}{{ item.url }}" >
         <figure>
-          <div class="thumb-square img img-circle img-thumbnail" style="background-image: url({{ site.cdn | replace: '0x0', '300x300'}}{{ item.image }})"></div>
+          <div class="thumb-square img img-circle img-thumbnail" style="background-image: url({{ site.cdn | replace: '0x0', '300x300'}}{{ item.avatar }})"></div>
         </figure>
         {% if item.title %}<h3>{{ item.title }}</h3>{% endif %}
         <p>aka<br>{{ item.aka }}</p>
