--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -16,9 +16,11 @@ layout: default
     <div class="row equal">
       {% for item in team %}
       <div class="col-sm-4 col-md-3"><a class="thumb" href="{{ site.url }}{{ item.url }}" >
-        <figure class="img-circle thumbnail">
-          <div class="thumb-square img" style="background-image: url({{ site.cdn | replace: '0x0', '300x300'}}{{ item.avatar }})"></div>
-        </figure>
+        <div class="img-circle thumbnail">
+          <figure>
+            <div class="thumb-square img" style="background-image: url({{ site.cdn | replace: '0x0', '300x300'}}{{ item.avatar }})"></div>
+          </figure>
+        </div>
         {% if item.title %}<h3>{{ item.title }}</h3>{% endif %}
         <p>aka<br>{{ item.aka }}</p>
         <p>{{ item.wins }}-{{ item.losses }}-{{ item.draws }} ({{ item.kos }} KOs)</p>
