--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -17,7 +17,7 @@ layout: default
       {% for item in team %}
       <div class="col-sm-4 col-md-3 text-center"><a class="thumb" href="{{ site.url }}{{ item.url }}" >
         <figure>
-          <img class="img-circle img-thumbnail" src="{{ site.cdn | replace: '0x0', '300x300'}}{{ item.avatar }})"/>
+          <img class="img-circle img-thumbnail" src="{{ site.cdn | replace: '0x0', '300x300'}}{{ item.avatar }}"/>
         </figure>
 
         {% if item.title %}<h3>{{ item.title }}</h3>{% endif %}
