--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,14 +4,14 @@ layout: default
 {% assign team = (site.team | where: 'published', 1 | sort: 'order') %}
 {% include modules/carousel.html category=team %}
 
-<div class="section" id="content">
+<!--div class="section" id="content">
   <div class="container">
     <h1 class="page-header">{{ page.title }}</h1>
     <p class="lead">{{ content | strip_html | newline_to_br }}</p>
   </div>
-</div>
+</div-->
   
-<div class="section" id="content">
+<div class="section grey" id="content">
   <div class="container">
     <div class="row equal">
       {% for item in team %}
