--- a/_includes/assets/css/style.css
+++ b/_includes/assets/css/style.css
@@ -252,6 +252,13 @@ a.thumb, a.thumb:hover {
     text-decoration:none;
     cursor: pointer;
 }
+.thumb figure * {
+    -webkit-transition: all 1s ease-in-out;
+    -moz-transition: all 1s ease-in-out;
+    -o-transition: all 1s ease-in-out;
+    -ms-transition: all 1s ease-in-out;
+    transition: all 1s ease-in-out;
+}
 .thumb:hover figure img, .thumb:hover figure .img {
     background-color: #0066ff;
 }
