--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -55,9 +55,8 @@
         {% assign pages = (site.content | where: 'published', 1 | where: 'parent', nil | sort: 'order') %}
         {% for item in pages %}
           <li {% if item.slug == page.slug or page.collection == item.slug or page.app == item.slug %}class="active"{% endif %}>
-            <a href="{{site.url}}{{ item.url }}">
+            <a href="#{{ item.slug }}">
               {% if item.slug == 'index' %}Home{% else %}{{ item.title }}{% endif %}
-              <small>{{ item.japanese }}</small>
             </a>
           </li>
         {% endfor %}
