--- a/_includes/assets/css/style.css
+++ b/_includes/assets/css/style.css
@@ -67,13 +67,9 @@ a.thumbnail:hover, a.thumbnail:focus, a.thumbnail.active {
     font-family: Oswald, sans-serif;
     text-transform: uppercase;
     color:#fff;
-    /*text-shadow: 0px 1px 1px #000, 1px 0px 1px #000, 0px -1px 1px #000, -1px 0px 1px #000;*/
+    padding-top: 25px;
+    padding-bottom: 25px;
 }
-.navbar-inverse .navbar-nav>li>a:hover {
-    background-color:#c00;
-    /*text-shadow: 0px 1px 1px #000, 1px 0px 1px #000, 0px -1px 1px #000, -1px 0px 1px #000;*/
-}
-
 @media (max-width: 767px) {
     .navbar .brand-small {
         max-width: 80%;
@@ -116,7 +112,7 @@ a.thumbnail:hover, a.thumbnail:focus, a.thumbnail.active {
         float: right;
         margin-right: 0;
     }
-    .navbar-inverse .navbar-nav>.active>a, .navbar-inverse .navbar-nav>.active>a:hover, .navbar-inverse .navbar-nav>.active>a:focus {
+    .navbar-inverse .navbar-nav>li>a:hover, .navbar-inverse .navbar-nav>.active>a, .navbar-inverse .navbar-nav>.active>a:hover, .navbar-inverse .navbar-nav>.active>a:focus {
         color: #06f !important;
         background-color: transparent;
     }
