--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 {% assign team = (site.team | where: 'published', 1 | sort: 'order') %}
-{% include modules/carousel.html category=team %}
+{% include modules/carousel.html category=team id="index" %}
 
 <!--div class="section" id="content">
   <div class="container">
@@ -11,7 +11,7 @@ layout: default
   </div>
 </div-->
   
-<div class="section grey" id="content">
+<div class="section grey" id="team">
   <div class="container">
     <div class="row equal">
       {% for item in team %}
@@ -29,7 +29,7 @@ layout: default
   </div>
 </div>
   
-<div class="section" id="content">
+<div class="section" id="gallery">
   <div class="container">
   {% assign gallery = (site.gallery | where: 'published', 1 | sort: 'order') %}
   <div class="row equal">
@@ -42,5 +42,10 @@ layout: default
     </a><br></div>
     {% endfor %}
   </div>
+  </div>
+</div>
+
+<div class="section" id="contact">
+  <div class="container">
   </div>
 </div>
