--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -54,8 +54,8 @@
         
         {% assign pages = (site.content | where: 'published', 1 | where: 'parent', nil | sort: 'order') %}
         {% for item in pages %}
-          <li {% if item.slug == page.slug or page.collection == item.slug or page.app == item.slug %}class="active"{% endif %}>
-            <a href="#{{ item.slug }}">
+          <li>
+            <a href="{{ site.url }}#{{ item.slug }}">
               {% if item.slug == 'index' %}Home{% else %}{{ item.title }}{% endif %}
             </a>
           </li>
