--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -45,6 +45,11 @@ layout: default
   </div>
 </div>
 
+<div class="section" id="blog">
+  <div class="container">
+  </div>
+</div>
+
 <div class="section" id="contact">
   <div class="container">
   </div>
