--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -55,7 +55,7 @@
         {% assign pages = (site.content | where: 'published', 1 | where: 'parent', nil | sort: 'order') %}
         {% for item in pages %}
           <li {% if item.slug == page.slug or page.collection == item.slug or page.app == item.slug %}class="active"{% endif %}>
-            <a href="{{ site.url }}/#{{ item.slug }}">
+            <a href="{% unless page.slug == 'index' %}{{ site.url }}/{% endunless %}#{{ item.slug }}">
               {% if item.slug == 'index' %}Home{% else %}{{ item.title }}{% endif %}
             </a>
           </li>
