--- a/_includes/modules/carousel.html
+++ b/_includes/modules/carousel.html
@@ -1,4 +1,4 @@
-  <div id="carousel" class="carousel slide fh" data-ride="carousel">
+  <div id="index" class="carousel slide fh" data-ride="carousel">
   <!-- Indicators -->
     <div class="container rel">
       <ol class="carousel-indicators">
