--- a/_includes/assets/css/style.css
+++ b/_includes/assets/css/style.css
@@ -4,6 +4,9 @@ html, body, .fh {
 body {
     position: relative;
 }
+.container {
+    max-width: 960px;
+}
 h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6, .datebox span, .text-lg {
     font-family: Oswald, sans-serif;
     font-weight: 800;
