--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,7 +34,7 @@
     <meta name="twitter:creator" content="@{{ site.twitter }}"/>
     
   </head>
-  <body data-spy="scroll" data-target=".navbar-inverse">
+  <body data-spy="scroll" data-target=".navbar-inverse" data-offset="70">
   <a class="sr-only sr-only-focusable" href="#content">Skip to main content</a>
   <div id="nav" class="navbar navbar-inverse affix-top {% if page.slug == 'index' %}navbar-bottom{% endif %}" role="navigation">
     <div class="container">
