--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -31,6 +31,7 @@ layout: default
   
 <div class="section" id="gallery">
   <div class="container">
+  <h3>Gallery</h3>
   {% assign gallery = (site.gallery | where: 'published', 1 | sort: 'order') %}
   <div class="row equal">
     {% for item in gallery %}
