--- a/_layouts/home/home.html
+++ b/_layouts/home/home.html
@@ -10,10 +10,24 @@ layout: default
     <p class="lead">{{ content | strip_html | newline_to_br }}</p>
   </div>
 </div-->
-{% for section in site.content %}
-  {% capture include %}home/{{ section.layout }}.html{% endcapture %}
-  {% include_relative {{include}} %}
-{% endfor %}
+  
+<div class="section grey" id="team">
+  <div class="container">
+    <div class="row equal">
+      {% for item in team %}
+      <div class="col-sm-4 col-md-3 text-center"><a class="thumb" href="{{ site.url }}{{ item.url }}" >
+        <figure>
+          <img class="img-circle img-thumbnail" src="{{ site.cdn | replace: '0x0', '300x300'}}{{ item.avatar }}"/>
+        </figure>
+
+        {% if item.title %}<h3>{{ item.title }}</h3>{% endif %}
+        <p>aka<br>{{ item.aka }}</p>
+        <p>{{ item.wins }}-{{ item.losses }}-{{ item.draws }} ({{ item.kos }} KOs)</p>
+      </a><br></div>
+      {% endfor %}
+    </div>
+  </div>
+</div>
   
 <div class="section" id="gallery">
   <div class="container">
