--- a/_layouts/gallery.html
+++ b/_layouts/gallery.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 {% if page.image %}
-<div class="banner" style="background-image: url(//cdn.donlabs.com/1280x400/brightonjapan/{{ page.image }})">
+<div class="banner" style="background-image: url({{ site.cdn | replace: '0x0', '1280x400' }}{{ page.image }})">
   <div class="container">
     <div class="banner-text">
       <h1 class="box">{{ page.title }}</h1>
