--- a/_layouts/gallery.html
+++ b/_layouts/gallery.html
@@ -1,15 +1,7 @@
 ---
 layout: default
 ---
-{% if page.image %}
-<div class="banner" style="background-image: url({{ site.cdn | replace: '0x0', '1280x400' }}{{ page.image }})">
-  <div class="container">
-    <div class="banner-text">
-      <h1 class="box">{{ page.title }}</h1>
-    </div>
-  </div>
-</div>
-{% endif %}
+{% if page.image %}{% include modules/banner %}{% endif %}
 
 <div class="section" id="content">
   <div class="container">
