--- a/_layouts/gallery.html
+++ b/_layouts/gallery.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-{% if page.image %}{% include modules/banner %}{% endif %}
+{% if page.image %}{% include modules/banner.html %}{% endif %}
 
 <div class="section" id="content">
   <div class="container">
