--- a/_includes/template/home/team.html
+++ b/_includes/template/home/team.html
@@ -4,7 +4,7 @@
       {% for item in team %}
       <div class="col-sm-4 col-md-3 text-center"><a class="thumb" href="{{ site.url }}{{ item.url }}" >
         <figure>
-          <img class="img-circle img-thumbnail" src="{{ site.cdn | replace: '0x0', '300x300'}}{{ item.avatar }}"/>
+          <img class="img-responsive img-circle img-thumbnail" src="{{ site.cdn | replace: '0x0', '300x300'}}{{ item.avatar }}"/>
         </figure>
 
         {% if item.title %}<h3>{{ item.title }}</h3>{% endif %}
