--- a/_includes/template/home/gallery.html
+++ b/_includes/template/home/gallery.html
@@ -16,7 +16,7 @@
           {% capture id %}{{ video[1] }}{% endcapture %}
         {% endif %}
         
-        {% capture url %}{{ item.youtube }}{% endcapture %}
+        {% capture url %}{{ item.youtube }}" data-toggle="lightbox{% endcapture %}
         {% capture thumb %}//img.youtube.com/vi/{{ id }}/0.jpg{% endcapture %}
         
       {% endif %}
