--- a/_includes/template/home/gallery.html
+++ b/_includes/template/home/gallery.html
@@ -23,6 +23,7 @@
           <div class="thumb-wide img" style="background-image: url({{ thumb }})"></div>
         </figure>
         {% if item.title %}<h3>{{ item.title }}</h3>{% endif %}
+        {{ item.content }}
       </a><br></div>
       {% endfor %}
     </div>
