--- a/_includes/template/home/team.html
+++ b/_includes/template/home/team.html
@@ -1,5 +1,6 @@
 <div class="section grey" id="team">
   <div class="container">
+    <h3 class="h2 page-header">{{ section.title }}</h3>
     <div class="row equal">
       {% for item in team %}
       <div class="col-sm-4 col-md-3 text-center"><a class="thumb" href="{{ site.url }}{{ item.url }}" >
