--- a/_includes/modules/carousel.html
+++ b/_includes/modules/carousel.html
@@ -1,6 +1,6 @@
   <div id="index" class="carousel slide fh" data-ride="carousel">
   <!-- Indicators -->
-    <div class="container rel">
+    <!--div class="container rel">
       <ol class="carousel-indicators">
         {% capture i %}0{% endcapture %}
         {% for item in include.category %}
@@ -8,7 +8,7 @@
         {% capture i %}{{ i | plus:1 }}{% endcapture %}
         {% endfor %}
       </ol>
-    </div>
+    </div-->
 
     <!-- Wrapper for slides -->
     <div class="carousel-inner fh">
@@ -22,10 +22,10 @@
     </div>
 
     <!-- Controls -->
-    <!--a class="left carousel-control" href="#carousel" role="button" data-slide="prev">
+    <a class="left carousel-control" href="#carousel" role="button" data-slide="prev">
       <span class="glyphicon glyphicon-chevron-left"></span>
     </a>
     <a class="right carousel-control" href="#carousel" role="button" data-slide="next">
       <span class="glyphicon glyphicon-chevron-right"></span>
-    </a-->
+    </a>
   </div>
