--- a/_includes/modules/carousel.html
+++ b/_includes/modules/carousel.html
@@ -1,4 +1,5 @@
-  <div id="index" class="carousel slide fh" data-ride="carousel">
+<div id="{{ include.id }}">  
+  <div id="carousel" class="carousel slide fh" data-ride="carousel" data-pause="false">
   <!-- Indicators -->
     <!--div class="container rel">
       <ol class="carousel-indicators">
@@ -29,3 +30,4 @@
       <span class="glyphicon glyphicon-chevron-right"></span>
     </a>
   </div>
+</div>
