--- a/_includes/modules/carousel.html
+++ b/_includes/modules/carousel.html
@@ -1,4 +1,4 @@
-<div id="{{ include.id }}">  
+<div id="{{ include.id }}" class="fh">  
   <div id="carousel" class="carousel slide fh" data-ride="carousel" data-pause="false">
   <!-- Indicators -->
     <!--div class="container rel">
