--- a/_includes/assets/css/style.css
+++ b/_includes/assets/css/style.css
@@ -168,6 +168,9 @@ body>footer a {
     height: 100%;
     z-index: -1;
 }
+.item.active>.banner {
+    background: transparent !important;
+}
 .banner .banner-text {
     position:absolute;
     bottom: 30px;
