squash! Merge branch 'gh-pages' of https://github.com/abeta/badymanagement into gh-pages

--- a/_includes/assets/css/style.css
+++ b/_includes/assets/css/style.css
@@ -433,3 +433,12 @@ body .don-share {
 .nav-stumbleupon a {
     background-color: #eb4924;
 }
+
+.nav-youtube a {
+    background-color: #e52d27;
+}
+
+.nav-instagram a {
+    background-color: #3f729b;
+}
+
