--- a/_includes/template/home/team.html
+++ b/_includes/template/home/team.html
@@ -5,12 +5,12 @@
       {% for item in team %}
       <div class="col-sm-4 col-md-3 text-center"><a class="thumb" href="{{ site.url }}{{ item.url }}" >
         <figure>
-          <img class="img-responsive img-circle img-thumbnail" src="{{ site.cdn | replace: '0x0', '300x300'}}{{ item.avatar }}"/>
+          <img class="img-circle img-thumbnail" src="{{ site.cdn | replace: '0x0', '300x300'}}{{ item.avatar }}"/>
         </figure>
 
         {% if item.title %}<h3>{{ item.title }}</h3>{% endif %}
         <p>aka<br>{{ item.aka }}</p>
-        <p>{{ item.wins }}-{{ item.losses }}-{{ item.draws }} ({{ item.kos }} KOs)</p>
+        <p>{{ item.wins }}-{{ item.losses }}-{{ item.draws }} {% if item.kos %}({{ item.kos }} KOs){% endif %}</p>
       </a><br></div>
       {% endfor %}
     </div>
