--- a/_includes/template/home/team.html
+++ b/_includes/template/home/team.html
@@ -9,7 +9,7 @@
         </figure>
 
         {% if item.title %}<h3>{{ item.title }}</h3>{% endif %}
-        <p>{{ item.wins }}-{{ item.losses }}-{{ item.draws }} {% if item.kos %}({{ item.kos }} KOs){% endif %}</p>
+        <p>{{ item.wins }}-{{ item.losses }}-{{ item.draws }} {% if item.kos > 0 %}({{ item.kos }} KOs){% endif %}</p>
       </a><br></div>
       {% endfor %}
     </div>
