--- a/_includes/assets/css/style.css
+++ b/_includes/assets/css/style.css
@@ -254,7 +254,7 @@ a.thumb, a.thumb:hover {
     -ms-transition: all 1s ease-in-out;
     transition: all 1s ease-in-out;
 }
-.thumb img {
+.section img {
     max-width: 100%;
     height: auto;
 }
