--- a/_layouts/fighter.html
+++ b/_layouts/fighter.html
@@ -9,13 +9,13 @@ layout: default
       <div class="col-sm-4">
         <img src="{{ site.cdn | replace: '0x0', '360x0'}}{{ page.avatar }}"><br><br>
         <div class="panel panel-default">
-          <div class="panel-heading"><h3 class="panel-title">Bady's Bio</h3></div>
+          <div class="panel-heading"><h3 class="panel-title">{{ page.title | split: ' ' | first }}'s Bio</h3></div>
           <div class="panel-body">
             <table class="table table-striped">
               <tbody>
                 <tr>
                   <td><strong>Name</strong></td>
-                  <td>{{ page.name }}</td>
+                  <td>{{ page.title }}</td>
                 </tr>
                 <tr>
                   <td><strong>Nationality</strong></td>
