squash! Update _content/fighters.html

--- a/_includes/template/home/team.html
+++ b/_includes/template/home/team.html
@@ -2,7 +2,7 @@
   <div class="container">
     <h3 class="h2 page-header">{{ section.title }}</h3>
     <div class="row equal">
-      {% assign team = (site[page.collection] | where: 'published', 1 | sort: 'order') %}
+      {% assign team = (site[page.app] | where: 'published', 1 | sort: 'order') %}
       {% for item in team %}
       <div class="col-sm-4 col-md-3 text-center"><a class="thumb" href="{{ site.url }}{{ item.url }}" >
         <figure>
