--- a/_includes/template/home/team.html
+++ b/_includes/template/home/team.html
@@ -10,14 +10,14 @@
         </figure>
 
         {% if item.title %}<h3>{{ item.title }}</h3>{% endif %}
+        
         {% if include.page.app == 'fighters' %}
         <p class="text-muted">{{ item.weight_class }}</p>
         <p>{{ item.wins }}-{{ item.losses }}-{{ item.draws }} {% if item.kos > 0 %}({{ item.kos }} KOs){% endif %}</p>
         {% else %}
-        {% assign timestamp = (site.time | date: '%s') %}
         {% assign agestamp = (item.birthday | date: '%s') %}
-        {% assign age = (timestamp | minus: agestamp) | divided_by: '31536000' %}
-        <p class="text-muted">{{ item.birthday }}</p>
+        {% assign age = ((site.time | date: '%s') | minus: agestamp) | divided_by: '31536000' %}
+        <p class="text-muted">{% if agestamp %}{{ age }}, {% endif %}{{ item.location }}</p>
         {% endif %}
       </a><br></div>
       {% endfor %}
