--- a/_layouts/model.html
+++ b/_layouts/model.html
@@ -17,32 +17,26 @@ layout: default
                   <td>{{ page.title }}</td>
                 </tr>
                 <tr>
-                  <td><strong>Nationality</strong></td>
-                  <td>{{ page.nationality }}</td>
+                  <td><strong>Location</strong></td>
+                  <td>{{ page.location }}</td>
                 </tr>
+                {% assign agestamp = (item.birthday | date: '%s') %}
+                {% assign age = ((site.time | date: '%s') | minus: agestamp) | divided_by: '31536000' %}
                 <tr>
-                  <td><strong>Date of Birth</strong></td>
-                  <td>{{ page.birthday }}</td>
-                </tr>
-                <tr>
-                  <td><strong>Hometown</strong></td>
-                  <td>{{ page.hometown }}</td>
-                </tr>
-                <tr>
-                  <td><strong>Weight Class</strong></td>
-                  <td>{{ page.weight_class }}</td>
+                  <td><strong>Age</strong></td>
+                  <td>{{ age }}</td>
                 </tr>
                 <tr>
                   <td><strong>Height</strong></td>
                   <td>{{ page.height }}</td>
                 </tr>
                 <tr>
-                  <td><strong>Coach</strong></td>
-                  <td>{{ page.coach }}</td>
+                  <td><strong>Waist</strong></td>
+                  <td>{{ page.waist }}</td>
                 </tr>
                 <tr>
-                  <td><strong>Inspiration</strong></td>
-                  <td>{{ page.inspiration }}</td>
+                  <td><strong>Bust</strong></td>
+                  <td>{{ page.bust }}</td>
                 </tr>
               </tbody>
             </table>
