--- a/_layouts/model.html
+++ b/_layouts/model.html
@@ -24,7 +24,7 @@ layout: default
                 {% assign age = ((site.time | date: '%s') | minus: agestamp) | divided_by: '31536000' %}
                 <tr>
                   <td><strong>Age</strong></td>
-                  <td>{{ age }}</td>
+                  <td>{% if agestamp %}{{ age }}{% endif %}</td>
                 </tr>
                 <tr>
                   <td><strong>Height</strong></td>
