--- a/_layouts/model.html
+++ b/_layouts/model.html
@@ -20,7 +20,7 @@ layout: default
                   <td><strong>Location</strong></td>
                   <td>{{ page.location }}</td>
                 </tr>
-                {% assign agestamp = (item.birthday | date: '%s') %}
+                {% assign agestamp = (page.birthday | date: '%s') %}
                 {% assign age = ((site.time | date: '%s') | minus: agestamp) | divided_by: '31536000' %}
                 <tr>
                   <td><strong>Age</strong></td>
