--- a/_layouts/fighter.html
+++ b/_layouts/fighter.html
@@ -25,7 +25,7 @@ layout: default
                   <td>{{ page.birthday }}</td>
                 </tr>
                 <tr>
-                  <td><strong>Hometown</strong></td>
+                  <td><strong>Location</strong></td>
                   <td>{{ page.hometown }}</td>
                 </tr>
                 <tr>
@@ -39,10 +39,6 @@ layout: default
                 <tr>
                   <td><strong>Coach</strong></td>
                   <td>{{ page.coach }}</td>
-                </tr>
-                <tr>
-                  <td><strong>Inspiration</strong></td>
-                  <td>{{ page.inspiration }}</td>
                 </tr>
               </tbody>
             </table>
