--- a/_layouts/fighter.html
+++ b/_layouts/fighter.html
@@ -12,6 +12,11 @@ layout: default
           <div class="panel-body">
             <table class="table table-striped">
               <tbody>
+                
+                <tr>
+                  <td><strong>Stats</strong></td>
+                  <td>{{ item.wins }}-{{ item.losses }}-{{ item.draws }} {% if item.kos > 0 %}({{ item.kos }} KOs){% endif %}</td>
+                </tr>
                 {% if page.weight_class %}
                 <tr>
                   <td><strong>Weight Class</strong></td>
