squash! Merge branch 'gh-pages' of github.com:abeta/10kboxing into gh-pages

--- a/_layouts/fighter.html
+++ b/_layouts/fighter.html
@@ -72,7 +72,7 @@ layout: default
                 <input type="tel" class="form-control" name="extra[telephone]">
               </div>
               <div class="form-group text-right">
-                <button type="submit" class="btn btn-danger btn-lg">Send Enquiry</button>
+                <button type="submit" class="btn btn-danger btn-lg btn-block">Send Enquiry</button>
               </div>
             </form>
           </div>
