--- a/_layouts/fighter.html
+++ b/_layouts/fighter.html
@@ -5,7 +5,7 @@ layout: default
 <div class="section" id="content">
   <div class="container">
     <div class="row">
-      <div class="col-sm-5">{{ content }}</div>
+      <div class="col-sm-4">{{ content }}</div>
       <div class="col-sm-4">
         <div class="panel panel-default">
           <div class="panel-heading"><h3 class="panel-title">{{ page.title | split: ' ' | first }}'s Bio</h3></div>
@@ -53,7 +53,7 @@ layout: default
           </div>
         </div>
       </div>
-      <div class="col-sm-3">
+      <div class="col-sm-4">
         <div class="panel panel-default">
           <div class="panel-heading"><h3 class="panel-title">Book {{ page.title | split: ' ' | first }}</h3></div>
           <div class="panel-body">
@@ -71,7 +71,7 @@ layout: default
                 <label for="telephone">Telephone</label>
                 <input type="tel" class="form-control" name="extra[telephone]">
               </div>
-              <div class="form-group text-right">
+              <div class="form-group">
                 <button type="submit" class="btn btn-danger btn-lg btn-block">Send Enquiry</button>
               </div>
             </form>
