--- a/_layouts/model.html
+++ b/_layouts/model.html
@@ -5,7 +5,7 @@ layout: default
 <div class="section" id="content">
   <div class="container">
     <div class="row">
-      <div class="col-sm-8">{{ content }}</div>
+      <div class="col-sm-4">{{ content }}</div>
       <div class="col-sm-4">
         <div class="panel panel-default">
           <div class="panel-heading"><h3 class="panel-title">{{ page.title | split: ' ' | first }}'s Bio</h3></div>
@@ -40,6 +40,31 @@ layout: default
                 </tr>
               </tbody>
             </table>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-4">
+        <div class="panel panel-default">
+          <div class="panel-heading"><h3 class="panel-title">Book {{ page.title | split: ' ' | first }}</h3></div>
+          <div class="panel-body">
+            <form role="form" action="https://mailer.abemedia.co.uk" method="post" id="contactForm">
+              <input type="hidden" name="subject" value="Book {{ page.title }} (Model)">
+              <div class="form-group">
+                <label for="name">Name *</label>
+                <input type="text" class="form-control" name="name" required>
+              </div>
+              <div class="form-group">
+                <label for="email">Email *</label>
+                <input type="email" class="form-control" name="email" required>
+              </div>
+              <div class="form-group">
+                <label for="telephone">Telephone</label>
+                <input type="tel" class="form-control" name="extra[telephone]">
+              </div>
+              <div class="form-group">
+                <button type="submit" class="btn btn-danger btn-lg btn-block">Send Enquiry</button>
+              </div>
+            </form>
           </div>
         </div>
       </div>
