--- a/_layouts/fighter.html
+++ b/_layouts/fighter.html
@@ -58,7 +58,7 @@ layout: default
           <div class="panel-heading"><h3 class="panel-title">Book {{ page.title | split: ' ' | first }}</h3></div>
           <div class="panel-body">
             <form role="form" action="https://mailer.abemedia.co.uk" method="post" id="contactForm">
-              <input type="hidden" name="subject" value="Book {{ page.title }}">
+              <input type="hidden" name="subject" value="Book {{ page.title }} (Boxer)">
               <div class="form-group">
                 <label for="name">Name *</label>
                 <input type="text" class="form-control" name="name" required>
