--- a/_includes/template/home/team.html
+++ b/_includes/template/home/team.html
@@ -22,9 +22,9 @@
         {% endif %}
       </a><br></div>
       
-      {% set smclear = (forloop.index0 | mod:3) %}
+      {% smclear = (forloop.index0 | mod:3) %}
       {% if smclear == 1 %}<p class="col-xs-12 visible-sm-block">&nbsp;</p>{% endif %}
-      {% set mdclear = (forloop.index0 | mod:4) %}
+      {% mdclear = (forloop.index0 | mod:4) %}
       {% if mdclear == 1 %}<p class="col-sm-12 hidden-xs hidden-sm">&nbsp;</p>{% endif %}
       
       {% endfor %}
