--- a/_includes/template/home/team.html
+++ b/_includes/template/home/team.html
@@ -22,10 +22,7 @@
         {% endif %}
       </a><br></div>
       
-      {% assign smclear = (forloop.index | mod:3) %}
-      {% if smclear == 0 %}<p class="col-xs-12 visible-sm-block">&nbsp;</p>{% endif %}
-      {% assign mdclear = (forloop.index | mod:4) %}
-      {% if mdclear == 0 %}<p class="col-sm-12 hidden-xs hidden-sm">&nbsp;</p>{% endif %}
+      {% cycle '', '', '<p class="col-xs-12 visible-sm-block">&nbsp;</p>', '<p class="col-sm-12 hidden-xs hidden-sm">&nbsp;</p>' %}
       
       {% endfor %}
     </div>
