--- a/_includes/template/home/team.html
+++ b/_includes/template/home/team.html
@@ -22,7 +22,7 @@
         {% endif %}
       </a><br></div>
       
-      {% cycle include.page.app: '', '', '<p class="col-xs-12 visible-sm-block">&nbsp;</p>', '<p class="col-sm-12 hidden-xs hidden-sm">&nbsp;</p>' %}
+      {% cycle include.page.app: '', '', '<p class="col-xs-12 visible-sm-block"></p>', '<p class="col-sm-12 hidden-xs hidden-sm"></p>' %}
       
       {% endfor %}
     </div>
