squash! Merge branch 'gh-pages' of github.com:abeta/10kboxing into gh-pages

--- a/_layouts/fighter.html
+++ b/_layouts/fighter.html
@@ -5,7 +5,20 @@ layout: default
 <div class="section" id="content">
   <div class="container">
     <div class="row">
-      <div class="col-sm-8">{{ content }}</div>
+      <div class="col-sm-8">{{ content }}
+        {% if page.video %}
+        {% assign video = (page.youtube | split: 'v=') %}
+        {% if video[1] contains '&' %}
+          {% assign video = (video[1] | split: '&') %}
+          {% capture videoid %}{{ video[0] }}{% endcapture %}
+        {% else %}
+          {% capture videoid %}{{ video[1] }}{% endcapture %}
+        {% endif %}<hr>
+        <div class="embed-responsive embed-responsive-16by9">
+          <iframe class="embed-responsive-item" src="//www.youtube.com/embed/{{ videoid }}?rel=0" allowfullscreen></iframe>
+        {% endif %}
+        </div>
+      </div>
       <div class="col-sm-4">
         <div class="panel panel-default">
           <div class="panel-heading"><h3 class="panel-title">{{ page.title | split: ' ' | first }}'s Bio</h3></div>
