--- a/_layouts/model.html
+++ b/_layouts/model.html
@@ -5,7 +5,7 @@ layout: default
 <div class="section" id="content">
   <div class="container">
     <div class="row">
-      <div class="col-sm-4">{{ content }}</div>
+      <div class="col-sm-8">{{ content | replace_first:'<p>','<p class="lead">' }}</div>
       <div class="col-sm-4">
         <div class="panel panel-default">
           <div class="panel-heading"><h3 class="panel-title">{{ page.title | split: ' ' | first }}'s Bio</h3></div>
@@ -48,8 +48,7 @@ layout: default
             </table>
           </div>
         </div>
-      </div>
-      <div class="col-sm-4">
+        
         <div class="panel panel-default">
           <div class="panel-heading"><h3 class="panel-title">Book {{ page.title | split: ' ' | first }}</h3></div>
           <div class="panel-body">
