--- a/_system/layouts/home.xml
+++ b/_system/layouts/home.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <form>
     <fields>
-        <fieldset name="content">
+        <fieldset name="general">
             <field name="slides" type="multiform" label="Slideshow" filter="array" default="[{'ticket': 'Standard Ticket'}, {'ticket': 'VIP Ticket'}, {'ticket': 'Ringside Ticket'}]">
                 <field name="image" type="media" label="Image" filter="string" class="form-control" />
                 
