squash! Update _content/index.html

--- a/_includes/modules/carousel.html
+++ b/_includes/modules/carousel.html
@@ -15,8 +15,9 @@
     <div class="carousel-inner fh">
       {% capture i %}0{% endcapture %}
       {% for item in include.category %}
+      {% capture slide %}{{ item[1].slide }}{{ item.slide }}{% endcapture %}
       <div class="item fh {% if {{i}} == '0' %}active{% endif %}">
-        <div class="banner" style="background-image: url({{ site.cdn | replace: '0x0', '1280x720'}}{{ item.slide }})"></div>
+        <div class="banner" style="background-image: url({{ site.cdn | replace: '0x0', '1280x720'}}{{ slide }})"></div>
       </div>
       {% capture i %}{{ i | plus:1 }}{% endcapture %}
       {% endfor %}
